multi boards arty icons, tooltips